Added simple_detector_simulator beta

--- a/libindi/examples/CMakeLists.txt
+++ b/libindi/examples/CMakeLists.txt
@@ -5,3 +5,4 @@ add_subdirectory(tutorial_four)
 add_subdirectory(tutorial_five)
 add_subdirectory(tutorial_six)
 add_subdirectory(tutorial_seven)
+add_subdirectory(tutorial_eight)
