Modify RTLSDR driver to support multiple devices

--- a/3rdparty/indi-rtlsdr/CMakeLists.txt
+++ b/3rdparty/indi-rtlsdr/CMakeLists.txt
@@ -1,8 +1,8 @@
 cmake_minimum_required(VERSION 2.7)
 PROJECT(indi_rtlsdr CXX C)
 
-set (VERSION_MAJOR 1)
-set (VERSION_MINOR 0)
+set (RTLSDR_VERSION_MAJOR 1)
+set (RTLSDR_VERSION_MINOR 0)
 
 LIST(APPEND CMAKE_MODULE_PATH "${CMAKE_CURRENT_SOURCE_DIR}/cmake_modules/")
 LIST(APPEND CMAKE_MODULE_PATH "${CMAKE_CURRENT_SOURCE_DIR}/../../cmake_modules/")
