Add qtpositioning dependency

--- a/debian/kstars/control
+++ b/debian/kstars/control
@@ -10,6 +10,7 @@ Build-Depends: cmake,
                qtbase5-dev,
                qtdeclarative5-dev,
                qtmultimedia5-dev,
+               qtpositioning5-dev,
                libqt5svg5-dev,
                libqt5sql5-sqlite,
                kdoctools-dev,
