Added i.Nova PLx cameras driver

--- a/3rdparty/CMakeLists.txt
+++ b/3rdparty/CMakeLists.txt
@@ -36,6 +36,7 @@ IF (UNIX OR APPLE)
             STRING(FIND ${SOURCE_FILE} libqsi DIR5_FOUND)
             STRING(FIND ${SOURCE_FILE} libsbig DIR6_FOUND)
             STRING(FIND ${SOURCE_FILE} fxload-libusb DIR7_FOUND)
+            STRING(FIND ${SOURCE_FILE} libinovasdk DIR8_FOUND)
             IF (NOT ${DIR1_FOUND} EQUAL -1 OR NOT ${DIR2_FOUND} EQUAL -1 OR NOT ${DIR3_FOUND} EQUAL -1 OR NOT ${DIR4_FOUND} EQUAL -1 OR
                 NOT ${DIR5_FOUND} EQUAL -1 OR NOT ${DIR6_FOUND} EQUAL -1 OR NOT ${DIR7_FOUND} EQUAL -1)
                 LIST(REMOVE_ITEM ALL_SOURCE_FILES ${SOURCE_FILE})
@@ -59,6 +60,7 @@ option(WITH_CLOUDWATCHER "Install AAG Cloud Watcher Driver" On)
 option(WITH_MI "Install Moravian Driver" Off)
 option(WITH_FLI "Install FLI Driver" On)
 option(WITH_SBIG "Install SBIG Driver" On)
+option(WITH_INOVAPLX "Install i.Nova PLx Driver" On)
 option(WITH_APOGEE "Install Apogee Driver" On)
 option(WITH_QHY "Install QHY Driver" On)
 option(WITH_GPHOTO "Install GPhoto Driver" On)
@@ -77,6 +79,7 @@ IF (${CMAKE_SYSTEM_NAME} MATCHES "Darwin")
     set(WITH_MI Off)
     set(WITH_FLI Off)
     set(WITH_SBIG Off)
+    set(WITH_INOVAPLX Off)
     set(WITH_APOGEE Off)
     set(WITH_DUINO Off)
     set(WITH_FISHCAMP Off)
@@ -147,6 +150,17 @@ add_subdirectory(libsbig)
 SET(LIBRARIES_FOUND FALSE)
 endif (SBIG_FOUND)
 endif (WITH_SBIG)
+
+## INOVA
+if (WITH_INOVAPLX)
+find_package(INOVAPLX)
+if (INOVASDK_FOUND)
+add_subdirectory(indi-inovaplx)
+else (INOVASDK_FOUND)
+add_subdirectory(libinovasdk)
+SET(LIBRARIES_FOUND FALSE)
+endif (INOVASDK_FOUND)
+endif (WITH_INOVAPLX)
 
 ## FLI
 if (WITH_FLI)
@@ -260,6 +274,10 @@ endif (WITH_QHY AND NOT QHY_FOUND)
 if (WITH_SBIG AND NOT SBIG_FOUND)
 message(STATUS "libsbigudrv was not found and will now be built. Please install libsbigudrv first before running cmake again to install indi-sbig.")
 endif (WITH_SBIG AND NOT SBIG_FOUND)
+
+if (WITH_INOVAPLX AND NOT INOVASDK)
+message(STATUS "libinovasdk was not found and will now be built. Please install libinovasdk first before running cmake again to install indi-inovaplx.")
+endif (WITH_INOVAPLX AND NOT INOVASDK_FOUND)
 
 if (WITH_FLI AND NOT FLI_FOUND)
 message(STATUS "libfli was not found and will now be built. Please install libfli first before running cmake again to install indi-fli.")
