Initial fixes for inova CCD driver to bring it inline with INDI CCD drivers structure. Must be tested.

--- a/3rdparty/indi-inovaplx/CMakeLists.txt
+++ b/3rdparty/indi-inovaplx/CMakeLists.txt
@@ -1,8 +1,8 @@
 cmake_minimum_required(VERSION 2.7)
 PROJECT(indi_inovaplx CXX C)
 
-set (VERSION_MAJOR 1)
-set (VERSION_MINOR 31)
+set (INOVAPLX_VERSION_MAJOR 1)
+set (INOVAPLX_VERSION_MINOR 3)
 
 LIST(APPEND CMAKE_MODULE_PATH "${CMAKE_CURRENT_SOURCE_DIR}/cmake_modules/")
 LIST(APPEND CMAKE_MODULE_PATH "${CMAKE_CURRENT_SOURCE_DIR}/../../cmake_modules/")
@@ -16,7 +16,6 @@ find_package(Threads REQUIRED)
 
 configure_file(${CMAKE_CURRENT_SOURCE_DIR}/config.h.cmake ${CMAKE_CURRENT_BINARY_DIR}/config.h )
 configure_file(${CMAKE_CURRENT_SOURCE_DIR}/indi_inovaplx_ccd.xml.cmake ${CMAKE_CURRENT_BINARY_DIR}/indi_inovaplx_ccd.xml )
-configure_file(${CMAKE_CURRENT_SOURCE_DIR}/indi_inovaplx_ccd_sk.xml.cmake ${CMAKE_CURRENT_BINARY_DIR}/indi_inovaplx_ccd_sk.xml )
 
 include_directories( ${CMAKE_CURRENT_BINARY_DIR})
 include_directories( ${CMAKE_CURRENT_SOURCE_DIR})
@@ -27,8 +26,6 @@ include_directories( ${CFITSIO_INCLUDE_DIR})
 include(CMakeCommon)
 
 ############# INOVAPLX CCD ###############
-if (CFITSIO_FOUND)
-
 set(inovaplxccd_SRCS
 	${CMAKE_CURRENT_SOURCE_DIR}/inovaplx_ccd.cpp
 )
@@ -39,7 +36,4 @@ target_link_libraries(indi_inovaplx_ccd ${INDI_LIBRARIES} ${CFITSIO_LIBRARIES} $
 
 install(TARGETS indi_inovaplx_ccd RUNTIME DESTINATION bin)
 
-endif (CFITSIO_FOUND)
-
 install(FILES ${CMAKE_CURRENT_BINARY_DIR}/indi_inovaplx_ccd.xml DESTINATION ${INDI_DATA_DIR})
-install(FILES ${CMAKE_CURRENT_BINARY_DIR}/indi_inovaplx_ccd_sk.xml DESTINATION ${INDI_DATA_DIR})
