Update gitignore to use wildcards

--- a/.gitignore
+++ b/.gitignore
@@ -1,97 +1,8 @@
-/*.user*
-3rdparty/*.user*
-3rdparty/indi-aagcloudwatcher/*.user*
-3rdparty/fliusb/*.user*
-3rdparty/generic-ccd/*.user*
-3rdparty/indi-asi/*.user*
-3rdparty/indi-dsi/*.user*
-3rdparty/indi-mi/*.user*
-3rdparty/indi-ffmv/*.user*
-3rdparty/indi-gpsd/*.user*
-3rdparty/indi-apogee/*.user*
-3rdparty/indi-duino/*.user*
-3rdparty/indi-duino/add-on/*.user*
-3rdparty/indi-duino/add-on/meteostationWEB/*.user*
-3rdparty/indi-duino/add-on/meteostationWEB/html/*.user*
-3rdparty/indi-duino/add-on/meteostationWEB/html/CHART/*.user*
-3rdparty/indi-duino/add-on/meteostationWEB/html/css/*.user*
-3rdparty/indi-duino/add-on/meteostationWEB/html/js/*.user*
-3rdparty/indi-duino/add-on/meteostationWEB/html/justGage/*.user*
-3rdparty/indi-duino/add-on/meteostationWEB/html/justGage/resources/*.user*
-3rdparty/indi-duino/add-on/meteostationWEB/html/justGage/resources/js/*.user*
-3rdparty/indi-duino/devices/*.user*
-3rdparty/indi-duino/devices/Firmwares/*.user*
-3rdparty/indi-duino/devices/Firmwares/Cosmos/*.user*
-3rdparty/indi-duino/devices/Firmwares/INDIDUINOStepper/*.user*
-3rdparty/indi-duino/devices/Firmwares/METEOtest/*.user*
-3rdparty/indi-duino/devices/Firmwares/TemplateINDIDUINO/*.user*
-3rdparty/indi-duino/devices/Firmwares/indiduinoMETEO/*.user*
-3rdparty/indi-duino/libfirmata/*.user*
-3rdparty/indi-duino/libfirmata/examples/*.user*
-3rdparty/indi-duino/libfirmata/src/*.user*
-3rdparty/indi-eqmod/*.user*
-3rdparty/indi-eqmod/align/*.user*
-3rdparty/indi-eqmod/align/chull/*.user*
-3rdparty/indi-eqmod/simulator/*.user*
-3rdparty/indi-fishcamp/*.user*
-3rdparty/indi-fli/*.user*
-3rdparty/indi-gphoto/*.user*
-3rdparty/indi-maxdomeii/*.user*
-3rdparty/indi-qsi/*.user*
-3rdparty/indi-sbig/*.user*
-3rdparty/indi-spectracyber/*.user*
-3rdparty/indi-sx/*.user*
-3rdparty/indi-qhy/*.user*
-3rdparty/indi-tess/*.user*
-3rdparty/libapogee/*.user*
-3rdparty/libfli/*.user*
-3rdparty/libqsi/*.user*
-3rdparty/libqsi/demo_src/*.user*
-3rdparty/libqsi/doc/*.user*
-3rdparty/sbig/*.user*
-cmake_modules/*.user*
-debian/*.user*
-debian/astrometry.net/*.user*
-debian/astrometry.net/source/*.user*
-debian/fliusb/*.user*
-debian/indi-apogee/*.user*
-debian/indi-eqmod/*.user*
-debian/indi-fli/*.user*
-debian/indi-gpsd/*.user*
-debian/indi-gphoto/*.user*
-debian/indi-maxdomeii/*.user*
-debian/indi-qhy/*.user*
-debian/indi-qsi/*.user*
-debian/indi-sbig/*.user*
-debian/indi-sx/*.user*
-debian/libapogee/*.user*
-debian/libfli/*.user*
-debian/libindi/*.user*
-debian/libindi/source/*.user*
-debian/libqsi/*.user*
-debian/sbig/*.user*
-libindi/*.user*
-libindi/drivers/*.user*
-libindi/drivers/auxiliary/*.user*
-libindi/drivers/ccd/*.user*
-libindi/drivers/filter_wheel/*.user*
-libindi/drivers/focuser/*.user*
-libindi/drivers/telescope/*.user*
-libindi/drivers/video/*.user*
-libindi/examples/*.user*
-libindi/examples/tutorial_five/*.user*
-libindi/examples/tutorial_four/*.user*
-libindi/examples/tutorial_one/*.user*
-libindi/examples/tutorial_six/*.user*
-libindi/examples/tutorial_three/*.user*
-libindi/examples/tutorial_two/*.user*
-libindi/libs/*.user*
-libindi/libs/indibase/*.user*
-libindi/libs/webcam/*.user*
-libindi/tools/*.user*
+CMakeLists.txt.user*
 
 # Ignore build directory
 build
+build-*
 
 # Gedit backup files
 *~
