--- a/debian/indi-inovaplx/control
+++ b/debian/indi-inovaplx/control
@@ -2,12 +2,12 @@ Source: indi-inovaplx
 Section: science
 Priority: extra
 Maintainer: Jasem Mutlaq <mutlaqja@ikarustech.com>
-Build-Depends: debhelper (>= 6), cdbs, cmake, libindi-dev, zlib1g-dev, libusb-1.0-0-dev, libinovasdk-dev, libcfitsio3-dev | libcfitsio-dev
+Build-Depends: debhelper (>= 6), cdbs, cmake, libindi-dev, zlib1g-dev, libusb-1.0-0-dev, libinovasdk, libcfitsio3-dev | libcfitsio-dev
 Standards-Version: 3.9.2
 
 Package: indi-inovaplx
 Architecture: any
-Depends: ${shlibs:Depends}, ${misc:Depends}, libindi1, libinovasdk
+Depends: ${shlibs:Depends}, ${misc:Depends}, libindi1
 Description: INDI iNova PLX Camera driver.
  .
  This driver is compatible with any INDI client such as KStars or Xephem.
