--- a/3rdparty/indi-rtlsdr/CMakeLists.txt
+++ b/3rdparty/indi-rtlsdr/CMakeLists.txt
@@ -11,6 +11,7 @@ set(BIN_INSTALL_DIR "${CMAKE_INSTALL_PREFIX}/bin")
 find_package(CFITSIO REQUIRED)
 find_package(INDI REQUIRED)
 find_package(ZLIB REQUIRED)
+find_package(DSPAU REQUIRED)
 find_package(RTLSDR REQUIRED)
 
 configure_file(${CMAKE_CURRENT_SOURCE_DIR}/config.h.cmake ${CMAKE_CURRENT_BINARY_DIR}/config.h )
@@ -32,7 +33,7 @@ set(rtlsdr_SRCS
 
 add_executable(indi_rtlsdr_detector ${rtlsdr_SRCS})
 
-target_link_libraries(indi_rtlsdr_detector ${RTLSDR_LIBRARIES} ${INDI_LIBRARIES} ${CFITSIO_LIBRARIES} ${M_LIB})
+target_link_libraries(indi_rtlsdr_detector ${RTLSDR_LIBRARIES} ${DSPAU_LIBRARIES} ${INDI_LIBRARIES} ${CFITSIO_LIBRARIES} ${M_LIB})
 
 install(TARGETS indi_rtlsdr_detector RUNTIME DESTINATION bin)
 
