[3rdparty] added librtk

--- a/3rdparty/CMakeLists.txt
+++ b/3rdparty/CMakeLists.txt
@@ -38,9 +38,18 @@ IF (UNIX OR APPLE)
             STRING(FIND ${SOURCE_FILE} fxload-libusb DIR7_FOUND)
             STRING(FIND ${SOURCE_FILE} libinovasdk DIR8_FOUND)
             STRING(FIND ${SOURCE_FILE} libdspau DIR9_FOUND)
-            IF (NOT ${DIR1_FOUND} EQUAL -1 OR NOT ${DIR2_FOUND} EQUAL -1 OR NOT ${DIR3_FOUND} EQUAL -1 OR NOT ${DIR4_FOUND} EQUAL -1 OR
-                NOT ${DIR5_FOUND} EQUAL -1 OR NOT ${DIR6_FOUND} EQUAL -1 OR NOT ${DIR7_FOUND} EQUAL -1 OR NOT ${DIR8_FOUND} EQUAL -1 OR
-                NOT ${DIR9_FOUND} EQUAL -1)
+            STRING(FIND ${SOURCE_FILE} librtk DIR10_FOUND)
+            IF (NOT ${DIR1_FOUND} EQUAL -1 OR
+		NOT ${DIR2_FOUND} EQUAL -1 OR
+		NOT ${DIR3_FOUND} EQUAL -1 OR
+		NOT ${DIR4_FOUND} EQUAL -1 OR
+		NOT ${DIR5_FOUND} EQUAL -1 OR
+		NOT ${DIR6_FOUND} EQUAL -1 OR
+		NOT ${DIR7_FOUND} EQUAL -1 OR
+		NOT ${DIR8_FOUND} EQUAL -1 OR
+		NOT ${DIR9_FOUND} EQUAL -1 OR
+		NOT ${DIR9_FOUND} EQUAL -1 OR
+		NOT ${DIR10_FOUND} EQUAL -1)
                 LIST(REMOVE_ITEM ALL_SOURCE_FILES ${SOURCE_FILE})
             ENDIF ()
         ENDFOREACH ()
