Disable QHY building on MacOS for now until we can properly build the QHY SDK on Mac

--- a/3rdparty/CMakeLists.txt
+++ b/3rdparty/CMakeLists.txt
@@ -87,6 +87,7 @@ IF (${CMAKE_SYSTEM_NAME} MATCHES "Darwin")
     set(WITH_FISHCAMP Off)
     set(WITH_GIGE Off)
     set(WITH_DSI Off)
+    set(WITH_QHY Off)
     set(WITH_MGEN Off)
     set(WITH_RTLSDR Off)
 ENDIF ()
