Disable apogee with old gcc versions [3rdparty]

--- a/3rdparty/CMakeLists.txt
+++ b/3rdparty/CMakeLists.txt
@@ -95,6 +95,10 @@ ENDIF ()
 IF ("${CMAKE_CXX_COMPILER_ID}" STREQUAL "AppleClang" OR "${CMAKE_CXX_COMPILER_ID}" STREQUAL "Clang")
     SET(WITH_DSI Off)
 ENDIF ()
+# Disable apogee with gcc 4.8 and earlier versions
+IF (CMAKE_COMPILER_IS_GNUCXX AND CMAKE_CXX_COMPILER_VERSION VERSION_LESS 4.9.0)
+    SET(WITH_APOGEE Off)
+ENDIF ()
 
 ## EQMod
 if (WITH_EQMOD)
