Update debian files for asi-common

--- a/debian/asi-common/control
+++ b/debian/asi-common/control
@@ -10,4 +10,4 @@ Package: asi-common
 Architecture: all
 Multi-Arch: foreign
 Depends: ${misc:Depends}
-Description: support files for ASI camers, like udev rules
+Description: udev rules for ASI cameras and filter wheels.
