Recover old ieq45 HC8406 driver. Add missing include files and adapting CmakeList.txt

--- a/libindi/CMakeLists.txt
+++ b/libindi/CMakeLists.txt
@@ -1,5 +1,5 @@
 cmake_minimum_required(VERSION 3.0)
-PROJECT(libindi C CXX)
+PROJECT(libindi C CXX )
 
 # Tell CMake to run moc when necessary:
 set(CMAKE_AUTOMOC ON)
@@ -546,6 +546,21 @@ target_link_libraries(indi_dsc_telescope indidriver AlignmentDriver)
 
 install(TARGETS indi_dsc_telescope RUNTIME DESTINATION bin)
 
+########### IEQ 8406 #############
+SET(ieq45_8406_SRC
+    ${CMAKE_CURRENT_SOURCE_DIR}/drivers/telescope/ieq45driver8406.c
+    ${CMAKE_CURRENT_SOURCE_DIR}/drivers/telescope/ieq45.cpp)
+
+IF (UNITY_BUILD)
+    ENABLE_UNITY_BUILD(indi_ieq45_8406 ieq45_8406_SRC 10 cpp)
+ENDIF ()
+
+add_executable(indi_ieq45_8406_telescope ${ieq45_8406_SRC})
+
+target_link_libraries(indi_ieq45_8406_telescope indidriver)
+
+install(TARGETS indi_ieq45_8406_telescope RUNTIME DESTINATION bin)
+
 ########### IEQ Pro / CEM60 #############
 SET(ieq_SRC
     ${CMAKE_CURRENT_SOURCE_DIR}/drivers/telescope/ieqprodriver.cpp
@@ -557,7 +572,7 @@ ENDIF ()
 
 add_executable(indi_ieq_telescope ${ieq_SRC})
 
-target_link_libraries(indi_ieq_telescope indidriver)
+target_link_libraries(indi_ieq_telescope indidriver  ${NOVA_LIBRARIES})
 
 install(TARGETS indi_ieq_telescope RUNTIME DESTINATION bin)
 
