--- a/libindi/examples/tutorial_six/CMakeLists.txt
+++ b/libindi/examples/tutorial_six/CMakeLists.txt
@@ -2,4 +2,6 @@
 add_executable(tutorial_client tutorial_client.cpp)
 
 target_link_libraries(tutorial_client indiclient ${ZLIB_LIBRARY} ${NOVA_LIBRARIES})
-
+IF (UNIX AND NOT APPLE)
+    target_link_libraries(tutorial_client -lpthread)
+ENDIF ()
